--- a/src/app/stations/stations.component.html
+++ b/src/app/stations/stations.component.html
@@ -12,6 +12,6 @@
   <h2>{{ selectedStation.name | uppercase }} Details</h2>
   <div><span>ID: </span>{{selectedStation.id}}</div>
   <div><span>Name: </span>{{selectedStation.name}}</div>
-  <div><span>Elevation: </span>{{selectedStation.elevation}}</div>
+  <div><span>Elevation: </span>{{selectedStation.elevation | number}}m</div>
 
 </div>
