--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,51 @@
-<h1>{{title}}</h1>
 
-<app-stations></app-stations>
+<div fxLayout="column" fxFlex>
+
+    <mat-sidenav-container fxFlex>
+        <mat-sidenav #sidenav mode="over" fxFlex>
+            <mat-nav-list fxFlex>
+                <mat-list-item (click)="sidenav.toggle()">
+                    <mat-icon matListIcon aria-label="Close Menu">close</mat-icon>
+                </mat-list-item>
+                <a routerLink="/map" (click)="sidenav.toggle()">
+                    <mat-list-item>
+                        <mat-icon matListIcon>map</mat-icon>
+                        <h3 matLine>Map</h3>
+                    </mat-list-item>
+                </a>
+                <a routerLink="/stations" (click)="sidenav.toggle()">
+                    <mat-list-item>
+                        <mat-icon matListIcon>insert_chart</mat-icon>
+                        <h3 matLine>Wx Stations</h3>
+                    </mat-list-item>
+                </a>
+            </mat-nav-list>
+            <mat-nav-list fxFlex>
+                <mat-divider></mat-divider>
+
+                <a href (click)="openDialog(); false">
+                    <mat-list-item>
+                        <mat-icon matListIcon>help</mat-icon>
+                        <h3 matLine>About</h3>
+                    </mat-list-item>
+                </a>
+                <!-- Cannot get this working -->
+                <!-- https://github.com/angular/material/issues/2792 -->
+            </mat-nav-list>
+
+        </mat-sidenav>
+        <mat-sidenav-content fxFlexFill>
+            <button id="hamburger" mat-icon-button (click)="sidenav.toggle()">
+                <mat-icon aria-label="Menu">menu</mat-icon>
+            </button>
+
+            <router-outlet></router-outlet>
+        </mat-sidenav-content>        
+    </mat-sidenav-container>
+
+</div>
+
+<!-- <app-stations></app-stations> -->
+
+<!-- <router-outlet></router-outlet> -->
+<!-- <app-messages></app-messages> -->
