--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -1,3 +1,3 @@
-<p>
-  map works!
-</p>
+<div id="map">
+    <img src="https://trello-attachments.s3.amazonaws.com/5ab28fc386605d8200bf5488/5ab2905e157e14819a4f875d/ce187ae0c12dff2acbeda66f8716f4ae/weather_replay_whistler.jpg" />
+<div>
