About dialog content

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,6 +1,16 @@
-<h2 mat-dialog-title>About</h2>
+<h2 mat-dialog-title>Wx Replay</h2>
 <mat-dialog-content>
-  <a href="https://icons8.com">Icon pack by Icons8</a>
+  Created by <a href="http://dominic.wrapson.com" target="_blank">@domwrap</a>.
+  <p id="social" fxFlex>
+    <a href="https://github.com/domwrap/weather-replay" target="_blank"><i class="fab fa-github"></i></a>
+    <a href="https://www.linkedin.com/in/domwrap" target="_blank"><i class="fab fa-linkedin"></i></a>
+    <a href="http://stackoverflow.com/users/2154487/domwrap" target="_blank"><i class="fab fa-stack-overflow"></i></a>
+    <a href="https://twitter.com/domwrap/" target="_blank"><i class="fab fa-twitter"></i></a>
+    <a href="https://instagram.com/domwrap/" target="_blank"><i class="fab fa-instagram"></i></a>
+  </p>
+  <small>
+    <!-- <a href="https://icons8.com">Icon pack by Icons8</a> -->
+  </small>
 </mat-dialog-content>
 <mat-dialog-actions>
     <button mat-button mat-dialog-close>Close</button>
